<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.main.profile.DeleteAccountDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:text="@string/delete_account1"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/are_you_sure_you_want_to_delete_the_account"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_52sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:backgroundTint="@color/light_red"
            android:gravity="center"
            android:text="@string/yes_delete"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_40sdp"
            android:background="@drawable/full_border_radius_12"
            android:gravity="center"
            android:text="@string/no"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/light_black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_delete" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>