<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.main.consultants.CurrentConsultInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/full_border_radius_12_blue_stroke"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/current_consultant_paid"
                android:textColor="@color/blue_app"
                android:textSize="@dimen/_12ssp" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/consultant_info"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <View
            android:id="@+id/v1"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:background="@color/grey_200"
            app:layout_constraintBottom_toBottomOf="@+id/tv1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv1"
            app:layout_constraintTop_toTopOf="@+id/tv1" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/consultant_number"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintStart_toStartOf="@+id/tv1"
            app:layout_constraintTop_toBottomOf="@+id/tv1" />

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv2"
            app:layout_constraintStart_toEndOf="@+id/tv2"
            app:layout_constraintTop_toTopOf="@+id/tv2" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/consultant_date1"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintStart_toStartOf="@+id/tv2"
            app:layout_constraintTop_toBottomOf="@+id/tv2" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv3"
            app:layout_constraintStart_toEndOf="@+id/tv3"
            app:layout_constraintTop_toTopOf="@+id/tv3" />

        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/consultant_time1"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintStart_toStartOf="@+id/tv3"
            app:layout_constraintTop_toBottomOf="@+id/tv3" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv4"
            app:layout_constraintStart_toEndOf="@+id/tv4"
            app:layout_constraintTop_toTopOf="@+id/tv4" />

        <TextView
            android:id="@+id/tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/consultant_type1"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintStart_toStartOf="@+id/tv4"
            app:layout_constraintTop_toBottomOf="@+id/tv4" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv5"
            app:layout_constraintStart_toEndOf="@+id/tv5"
            app:layout_constraintTop_toTopOf="@+id/tv5" />

        <TextView
            android:id="@+id/tv6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/consultant_duration1"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintStart_toStartOf="@+id/tv5"
            app:layout_constraintTop_toBottomOf="@+id/tv5" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv6"
            app:layout_constraintStart_toEndOf="@+id/tv6"
            app:layout_constraintTop_toTopOf="@+id/tv6" />


        <ImageView
            android:id="@+id/iv_location"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:contentDescription="@null"
            android:src="@drawable/ic_address"
            app:layout_constraintBottom_toTopOf="@+id/v2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v1" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/address1"
            android:textColor="@color/blue_app"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/iv_location"
            app:layout_constraintStart_toStartOf="@+id/iv_location"
            app:layout_constraintTop_toBottomOf="@+id/iv_location" />

        <TextView
            android:id="@+id/tv7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/pet_info"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv6" />

        <View
            android:id="@+id/v2"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:background="@color/grey_200"
            app:layout_constraintBottom_toBottomOf="@+id/tv7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv7"
            app:layout_constraintTop_toTopOf="@+id/tv7" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_105sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:elevation="@dimen/_8sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv7">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/iv_pet"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:riv_corner_radius="@dimen/_30sdp" />

                <TextView
                    android:id="@+id/tv_petName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_pet"
                    app:layout_constraintStart_toEndOf="@+id/iv_pet"
                    app:layout_constraintTop_toTopOf="@+id/iv_pet" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/tv_addDetails"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_46sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:backgroundTint="@color/blue_app"
                    android:text="@string/add_details1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    app:cornerRadius="@dimen/_8sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/notes"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card" />

        <FrameLayout
            android:id="@+id/f1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_90sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/full_border_radius_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv8">

            <TextView
                android:id="@+id/tv_notes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_8sdp"
                android:gravity="start"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/_10ssp" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/attached_images"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/f1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_32sdp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_chat"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_12sdp"
            app:cornerRadius="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textAllCaps="false"
            android:text="@string/chat1"
            android:visibility="gone"
            android:backgroundTint="@color/blue_app"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_images" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>