<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:scaleType="fitXY"
        android:src="@drawable/logofinal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="@dimen/_16sdp"
        android:layout_height="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_28sdp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/welcome"
        android:textColor="@color/light_black"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/tv_enterCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/enter_the_confirmation_code"
        android:textColor="@color/light_black"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/iv_back"
        app:layout_constraintTop_toBottomOf="@+id/iv_back" />

    <TextView
        android:id="@+id/tv_messageSent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/an_identification_code_has_been_sent_to_the_mobile_number"
        android:textColor="@color/light_black"
        android:textSize="@dimen/_12ssp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/tv_enterCode"
        app:layout_constraintTop_toBottomOf="@+id/tv_enterCode" />

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="+9661234567890"
        android:visibility="gone"
        android:textColor="@color/light_black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="@+id/tv_messageSent"
        app:layout_constraintTop_toBottomOf="@+id/tv_messageSent" />

</androidx.constraintlayout.widget.ConstraintLayout>